# qa-bot

./: .gitattributes  .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
bert_lib_v2/: ChatbotData_v2.csv  config.json  model.safetensors  qa_vectors_v3.json
chat_messages/: admin.py  models.py  serializers.py  urls.py  views.py
chat_messages/migrations/: 0001_initial.py  0002_rename_question_message_question.py  0003_message_chat_room.py
chat_rooms/: admin.py  models.py  serializers.py  urls.py  views.py
chat_rooms/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
inputs/: admin.py  models.py  serializers.py  urls.py  views.py
inputs/migrations/: 0001_initial.py
