[tool.poetry]
name = "qa-bot"
version = "0.1.0"
description = ""
authors = ["rwrq22 <61651734+rwrq22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
django-environ = "^0.10.0"
pytest-django = "^4.5.2"
pytest-testdox = "^3.0.1"
pytest-asyncio = "^0.21.0"
django-bootstrap5 = "^23.3"
requests = "^2.31.0"
openai = "^0.27.8"
transformers = "^4.35.1"
pandas = "^2.1.3"
torch = "^2.1.2"
sentencepiece = "^0.2.0"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.31.0"
environ = "^1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
